<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="home_button1">Entrées</string>
    <string name="home_button2">Plats</string>
    <string name="home_button3">Desserts</string>
    <string name="ingredients_dishe">Les ingrédients</string>
    <string name="title_dishe">Nom du plat</string>
    <string name="quantity">TextView</string>
    <string name="buttonLess">-</string>
    <string name="buttonMore">+</string>
    <string name="button_total">TOTAL</string>
    <string name="button_recycler_view_dish">Button</string>
    <string name="text_view_price">TextView</string>
    <string name="number_article">0</string>
</resources>